force-app/main/default/objects/Account/fields/Select_Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Select_Public_Group__c</fullName>
    <label>Select Public Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Consumer Durables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>