force-app/main/default/objects/Account/validationRules/Prevent_Account_Rec_from_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Account_Rec_from_Edit</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNEW())</errorConditionFormula>
    <errorMessage>Record can not be Edited</errorMessage>
</ValidationRule>