force-app/main/default/objects/Account/validationRules/Prevent_Hot_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Hot_Rating</fullName>
    <active>false</active>
    <description>Prevent  Hot Account Rating</description>
    <errorConditionFormula>ISPICKVAL(Rating,&apos;Hot&apos; )</errorConditionFormula>
    <errorDisplayField>Rating</errorDisplayField>
    <errorMessage>Account Rating  Hot not permitted</errorMessage>
</ValidationRule>