force-app/main/default/objects/Account/validationRules/Prevent_Rating_Hot_and_Type_Prospect.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Rating_Hot_and_Type_Prospect</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Rating,&apos;Hot&apos;)   &amp;&amp;   ISPICKVAL(Type, &apos;Prospect&apos;)</errorConditionFormula>
    <errorMessage>Rating can&apos;t be Hot when Type is Prospect</errorMessage>
</ValidationRule>